# CUDA-Kernel-Library

./: .clang-format  .clang-tidy  .gitignore  12_COMBINED_cuda-kernel-lab_spec.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  PROGRESS.md  README.md  requirements.txt  ruff.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_all.cpp  bench_gemm.cpp  bench_gemm_tensor.cpp  bench_gemv.cpp  bench_spmv.cpp  fusion_study.cpp  ncu_driver.cpp  run_ncu_round.sh  sweep.py
cmake/: CompilerWarnings.cmake  FindNVML.cmake
docs/: DESIGN_DECISIONS.md  DIAGNOSTIC_LOG.md  ENGINEERING_LOG.md  benchmarking.md  cusolver.md  gemm.md  gemv.md  nvml_telemetry.md  roofline_profiler.md  sparse.md  trsm.md
experiments/results/: summary.csv
experiments/results/ncu/round01/: naive_2048.txt  naive_4096.txt  round_meta.txt  tiled_2048.txt  tiled_4096.txt
experiments/results/ncu/round02/: register_2048.txt  register_4096.txt  round_meta.txt
experiments/results/ncu/round03/: cp_async_4096.txt  register_4096.txt  round_meta.txt
experiments/results/ncu/round04/: round_meta.txt  wmma_fp16_4096.txt
experiments/results/ncu/round06/: mma_ldm_4096.txt  round_meta.txt
experiments/results/ncu/round07/: mma_opt_4096.txt  round_meta.txt
experiments/results/ncu/round07b/: mma_opt_8192.txt  round_meta.txt
experiments/results/ncu/round09/: mma_opt_4096.txt  round_meta.txt
include/ckl/: cuda_check.hpp  device_buffer.hpp  event_timer.hpp  gemm.hpp  gemv.hpp  nvml_monitor.hpp  reference.hpp  roofline.hpp  solver.hpp  sparse.hpp  trsm.hpp
include/ckl/detail/: wmma_gemm.cuh
report/: main.tex  refs.bib
report/tables/: families.tex  gemm_ladder.tex
report_debug/: debug_report.tex
scripts/: check_no_dashes.py  gen_report_assets.py  plot_roofline.py
src/gemm/: CMakeLists.txt  cublas_gemm.cpp  cublas_gemm_ex.cpp  gemm_cp_async.cu  gemm_mma_ldmatrix.cu  gemm_mma_opt.cu  gemm_mma_ptx.cu  gemm_naive.cu  gemm_register.cu  gemm_tiled.cu  gemm_wmma_bf16.cu  gemm_wmma_fp16.cu
src/gemv/: CMakeLists.txt  cublas_gemv.cpp  gemv_naive.cu  gemv_vectorized.cu  gemv_warp.cu
src/profiler/: CMakeLists.txt  roofline.cpp
src/solver/: CMakeLists.txt  dense_solver.cpp
src/sparse/: CMakeLists.txt  cusparse_ref.cpp  spmv_csr_naive.cu  spmv_csr_warp.cu
src/telemetry/: CMakeLists.txt  nvml_monitor.cpp
src/tools/: device_probe.cu
src/trsm/: CMakeLists.txt  cublas_trsm.cpp  trsm_blocked.cu  trsm_naive.cu
tests/: CMakeLists.txt  test_gemm.cpp  test_gemm_tensor.cpp  test_gemv.cpp  test_nvml.cpp  test_solver.cpp  test_spmv.cpp  test_trsm.cpp
