# Correctness tests. These need a GPU to run; CI marks them hardware only and
# skips them in the cloud (Section 15). ctest runs them locally.

add_executable(test_gemm test_gemm.cpp)
target_link_libraries(test_gemm PRIVATE ckl_gemm ckl_headers)
ckl_set_warnings(test_gemm)
add_test(NAME gemm_correctness COMMAND test_gemm)
set_tests_properties(gemm_correctness PROPERTIES LABELS "gpu")

add_executable(test_gemm_tensor test_gemm_tensor.cpp)
target_link_libraries(test_gemm_tensor PRIVATE ckl_gemm ckl_headers)
ckl_set_warnings(test_gemm_tensor)
add_test(NAME gemm_tensor_correctness COMMAND test_gemm_tensor)
set_tests_properties(gemm_tensor_correctness PROPERTIES LABELS "gpu")

if(TARGET ckl_gemv)
    add_executable(test_gemv test_gemv.cpp)
    target_link_libraries(test_gemv PRIVATE ckl_gemv ckl_headers)
    ckl_set_warnings(test_gemv)
    add_test(NAME gemv_correctness COMMAND test_gemv)
    set_tests_properties(gemv_correctness PROPERTIES LABELS "gpu")
endif()

if(TARGET ckl_sparse)
    add_executable(test_spmv test_spmv.cpp)
    target_link_libraries(test_spmv PRIVATE ckl_sparse ckl_headers)
    ckl_set_warnings(test_spmv)
    add_test(NAME spmv_correctness COMMAND test_spmv)
    set_tests_properties(spmv_correctness PROPERTIES LABELS "gpu")
endif()

if(TARGET ckl_trsm)
    add_executable(test_trsm test_trsm.cpp)
    target_link_libraries(test_trsm PRIVATE ckl_trsm ckl_headers)
    ckl_set_warnings(test_trsm)
    add_test(NAME trsm_correctness COMMAND test_trsm)
    set_tests_properties(trsm_correctness PROPERTIES LABELS "gpu")
endif()

if(TARGET ckl_solver)
    add_executable(test_solver test_solver.cpp)
    target_link_libraries(test_solver PRIVATE ckl_solver ckl_headers)
    ckl_set_warnings(test_solver)
    add_test(NAME solver_residual COMMAND test_solver)
    set_tests_properties(solver_residual PROPERTIES LABELS "gpu")
endif()

if(TARGET ckl_telemetry)
    add_executable(test_nvml test_nvml.cpp)
    target_link_libraries(test_nvml PRIVATE ckl_telemetry ckl_gemm ckl_headers)
    ckl_set_warnings(test_nvml)
    add_test(NAME nvml_monitor COMMAND test_nvml)
    set_tests_properties(nvml_monitor PROPERTIES LABELS "gpu")
endif()
